[2020-05-18]update(mogo-hardcording)

--- a/www_root/mogo/html/Mogo.html
+++ b/www_root/mogo/html/Mogo.html
@@ -66,64 +66,65 @@
             </div>
             <!-- end of story -->
             <div class="section statistics">
-                <span class="project"><h2>42</h2>WEB DESIGN PROJECTS</span>
-                <span class="client"> <h2>123</h2>HAPPY CLIENT</span>
-                <span class="award">  <h2>15</h2>AWARD WINNER</span>
-                <span class="coffee"> <h2>99</h2>CUP OF COFFEE</span>
-                <span class="member"> <h2>24</h2>MEMBERS<br><br></span>
+                <div class="statistic-items"><span class="statistic-number">42</span><br>WEB&nbsp;DESIGN&nbsp;PROJECTS</div>
+                <div class="statistic-items"><span class="statistic-number">123</span><br>HAPPY&nbsp;CLIENT</div>
+                <div class="statistic-items"><span class="statistic-number">15</span><br>AWARD&nbsp;WINNER</div>
+                <div class="statistic-items"><span class="statistic-number">99</span><br>CUP&nbsp;OF&nbsp;COFFEE</div>
+                <div class="statistic-items"><span class="statistic-number">24</span><br>MEMBERS</div>
             </div>
             <!-- end of statistics -->
-            <div class="section services">
-                <h1>We work with</h1>
-                <h2>AMAZING SERVICES</h2>
-                <hr class="red">
-                <div class="services-item">
-                    <img src="img/mogo/mogo_photography.png" alt="">
-                    <h3>PHOTOGRAPHY</h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                </div>
-                <div class="services-item">
-                    <img src="img/mogo/mogo_web-design.png" alt="">
-                    <h3>WEB DESIGN</h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                </div>
-                <div class="services-item">
-                    <img src="img/mogo/mogo_creativity.png" alt="">
-                    <h3>CREATIVITY</h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                </div>
-                <div class="services-item">
-                    <img src="img/mogo/mogo_seo.png" alt="">
-                    <h3>SEO</h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                </div>
-                <div class="services-item">
-                    <img src="img/mogo/mogo_css-html.png" alt="">
-                    <h3>CSS/HTML</h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                </div>
-                <div class="services-item">
-                    <img src="img/mogo/mogo_digital.png" alt="">
-                    <h3>DIGITAL</h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            <div class="section weworkwith">
+                <span class="we-work-with">We&nbsp;work&nbsp;with</span><br>
+                <span class="amazing-services">AMAZING&nbsp;SERVICES</span>
+                <hr class="underline">
+                <div class="services-wrap">
+                    <div class="services-items">
+                        <img src="img/mogo/mogo_photography.png" alt="">
+                        <span class="services-title">PHOTOGRAPHY</span><br>
+                        <span class="services-content">LLorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                    </div>
+                    <div class="services-items">
+                        <img src="img/mogo/mogo_web-design.png" alt="">
+                        <span class="services-title">WEB DESIGN</span>
+                        <span class="services-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                    </div>
+                    <div class="services-items">
+                        <img src="img/mogo/mogo_creativity.png" alt="">
+                        <span class="services-title">CREATIVITY</span>
+                        <span class="services-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                    </div>
+                    <div class="services-items">
+                        <img src="img/mogo/mogo_seo.png" alt="">
+                        <span class="services-title">SEO</span>
+                        <span class="services-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                    </div>
+                    <div class="services-items">
+                        <img src="img/mogo/mogo_css-html.png" alt="">
+                        <span class="services-title">CSS/HTML</span>
+                        <span class="services-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                    </div>
+                    <div class="services-items">
+                        <img src="img/mogo/mogo_digital.png" alt="">
+                        <span class="services-title">DIGITAL</span>
+                        <span class="services-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                    </div>
                 </div>
             </div>
             <!-- end of services -->
-            <div class="section design">
-                <h1>For all devices</h1>
-                <h2>UNIQUE DESIGN</h2>
-                <hr class="red">
-                <div class="design-exam">
-                    <img src="img/mogo/mogo_main-img.png" alt="" class="main-img">
-                    <img src="img/mogo/mogo_sub-img.png" alt="" class="sub-img">
+            <div class="section foralldevices">
+                <span class="for-all-devices">For&nbsp;all&nbsp;devices</span><br>
+                <span class="unique-design">UNIQUE&nbsp;DESIGN</span>
+                <hr class="underline">
+                <div class="design-main">
+                    <div class="design-attached"></div>
                 </div>
             </div>
             <!-- end of design -->
-            <div class="section whatwedo">
-                <h1>Service</h1>
-                <h2>WHAT WE DO</h2>
-                <hr class="red">
-                <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+            <div class="section service-wrap">
+                <div class="service">service</div>
+                <div class="what-we-do">WHAT&nbsp;WE&nbsp;DO</div>
+                <hr class="underline">
+                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                 <img src="img/mogo/mogo_wwd.png" alt="">
                 <div class="dropdown selected">
                     <div class="drop-header">
