--- a/www_root/mogo/html/Mogo.html
+++ b/www_root/mogo/html/Mogo.html
@@ -128,8 +128,23 @@
                 <img src="img/mogo/mogo_wwd.png" alt="">
                 <div class="dropdown selected">
                     <div class="drop-header">
-                        <img src="img/mogo/mogo_photography.png" alt="">
-                        <span>PHOTOGRAPHY</span>
+                        <img src="" alt="">
+                        <span class="dropdown-header-title">PHOTOGRAPHY</span>
+                        <div class="toggle"></div>
+                    </div>
+                    <div class="drop-body">
+                        <span class="drop-body-content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </span>
+                        <div class="drop-body-scroll">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <div class="drop-header">
+                        <img src="" alt="">
+                        <span class="dropdown-header-title">PHOTOGRAPHY</span>
                         <div class="toggle"></div>
                     </div>
                     <div class="drop-body">
@@ -138,18 +153,8 @@
                 </div>
                 <div class="dropdown">
                     <div class="drop-header">
-                        <img src="img/mogo/mogo_photography.png" alt="">
-                        <span>PHOTOGRAPHY</span>
-                        <div class="toggle"></div>
-                    </div>
-                    <div class="drop-body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="drop-header">
-                        <img src="img/mogo/mogo_photography.png" alt="">
-                        <span>PHOTOGRAPHY</span>
+                        <img src="" alt="">
+                        <span class="dropdown-header-title">PHOTOGRAPHY</span>
                         <div class="toggle"></div>
                     </div>
                     <div class="drop-body">
@@ -158,46 +163,88 @@
                 </div>
             </div>
             <!-- end of whatwedo -->
-            <div class="section comment bg-f8 carousel">
-                <img src="img/mogo/mogo_carousel-left.png" alt="">
-                <img src="img/mogo/mogo_carousel-right.png" alt="">
-                <div class="comment-image">
-                    <img src="img/mogo/mogo_comment.png" alt="" class="small">
-                </div>
-                <div class="comment-contents">
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "<br>              
-                    <hr class="red inline"><h1>Jon Doe</h1>
+            <div class="section comment-wrap">
+                <div class="comment-content-wrap">
+                    <img class="carousel-left" src="img/mogo/mogo_carousel-left.png" alt="">
+                    <img class="carousel-right" src="img/mogo/mogo_carousel-right.png" alt="">
+                    <div class="comment-image">
+                        <img src="img/mogo/mogo_comment.png" alt="" class="small">
+                    </div>
+                    <div class="comment-contents">
+                        <span class="comment-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod tempor incididunt ut labore et dolore magna aliqua."</span>              
+                        <hr class="underline"><span class="comment-name">Jon Doe</span>
+                    </div>
                 </div>
             </div>
             <!-- end of comment -->
-            <div class="section meetourteam">
-                <h1>Who we are</h1>
-                <h2>MEET OUR TEAM</h2>
-                <hr class="red">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <div class="section whoweare">
+                <div class="who-we-are">Who&nbsp;we&nbsp;are</div><br>
+                <div class="meet-our-team">MEET&nbsp;OUR&nbsp;TEAM</div>
+                <hr class="underline">
+                <span class="contents">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 <div class="image-card">
-                    <img src="img/mogo/mogo_mot1.png" alt="" class="selected">    
+                    <div class="selected"> 
+                        <div class="menu">
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                        </div>
+                    </div>
+                    <span class="card-name">MATTHEW&nbsp;DIX</span><br>
+                    <span class="card-job">Graphic&nbsp;Design</span>
+                </div>
+
+                <div class="image-card">
+                    <div class="selected"> 
+                        <div class="menu">
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                        </div>
+                    </div>
+                    <span class="card-name">CHRISTOPHER&nbsp;CAMPBELL</span><br>
+                    <span class="card-job">Branding/UX&nbsp;Design</span>
                 </div>
                 <div class="image-card">
-                    <img src="img/mogo/mogo_mot2.png" alt="">    
-                </div>
-                <div class="image-card">
-                    <img src="img/mogo/mogo_mot3.png" alt="">    
-                </div>
-                <div class="logos">
-                    <img src="img/mogo/mogo_logos.png" alt="">
+                    <div class="selected"> 
+                        <div class="menu">
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                            <div class="menu-items"></div>
+                        </div>
+                    </div>    
+                    <span class="card-name">MICHAEL&nbsp;FERTIG</span><br>
+                    <span class="card-job">Developer</span>
                 </div>
             </div>
+            <div class="logos">
+            </div>
             <!-- end of meetourteam -->
-            <div class="section works">
-                <h1>What we do</h1>
-                <h2>SOME OF OUR WORK</h2>
-                <hr class="red">
+            <div class="section whatwedo_works">
+                <div class="what-we-do">What&nbsp;we&nbsp;do</div>
+                <div class="some-of-our-work">SOME&nbsp;OF&nbsp;OUR&nbsp;WORK</div>
+                <hr class="underline">
+                <div class="contents">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                <table>
+                </div>
+                <div class="temp-wrap">
+                    <div class="temp-layer"></div>
+                    <div class="temp-layer"></div>
+                    <div class="temp-layer"></div>
+                    <div class="temp-layer"></div>
+                    <div class="temp-layer"></div>
+                    <div class="temp-layer"></div>
+                    <div class="temp-layer"></div>
+                    <div class="temp-layer"></div>
+                </div>
+                <!-- need to change -->
+                <!-- <table>
                     <tr>
                         <td><img src="img/mogo/mogo_works1.png" alt=""></td>
-                        <td><img src="img/mogo/mogo_works2.png" alt="">/td>
+                        <td><img src="img/mogo/mogo_works2.png" alt=""></td>
                         <td rowspan=2><img src="img/mogo/mogo_works3.png" alt=""></td>
                         <td><img src="img/mogo/mogo_works4.png" alt=""></td>
                     </tr>
@@ -206,7 +253,7 @@
                         <td><img src="img/mogo/mogo_works6.png" alt=""></td>
                         <td><img src="img/mogo/mogo_works7.png" alt=""></td>
                     </tr>
-                </table> 
+                </table>  -->
             </div>
             <!-- end of works -->
             <div class="section comment">
