[2020-05-21]update(dashboard-BEM)

--- a/www_root/dashboard/html/index.html
+++ b/www_root/dashboard/html/index.html
@@ -10,13 +10,22 @@
 <body>
     <header class="header">
         <input type="text" class="header__input">
-        <div class="profile"></div>
+        <div class="profile">
+            <div class="profile__img--profile"></div>
+            <span class="profile__span">Alejandro</span>
+            <!-- reversed : float-right -->
+            <div class="profile__img--box"></div>
+            <div class="profile__img--alarm"></div>
+        </div>
     </header>
     <div class="left-navbar">
         <div class="logo">
             <div class="logo__img"></div>
         </div>
-        <div class="nav-items"><img src="" alt="" class="nav-items__img"><span class="nav-items__span">FEATURED</span></div>
+        <div class="nav-items">
+            <img src="" alt="" class="nav-items__img">
+            <span class="nav-items__span">FEATURED</span>
+        </div>
         <div class="nav-items">
             <img src="" alt="" class="nav-items__img">
             <span class="nav-items__span">SHOWS</span>
@@ -32,15 +41,83 @@
             <div class="nav-items-dropdown"><span class="nav-items-dropdown__span">THE DAILY SHOW</span></div>
             <div class="nav-items-dropdown"><span class="nav-items-dropdown__span">THE DAILY SHOW</span></div>
         </div>
-        <div class="nav-items"><img src="" alt="" class="nav-items__img"><span class="nav-items__span">CC ROAST</span></div>
-        <div class="nav-items"><img src="" alt="" class="nav-items__img"><span class="nav-items__span">SOCIAL</span></div>
-        <div class="nav-items"><img src="" alt="" class="nav-items__img"><span class="nav-items__span">TICKETS</span></div>
+        <div class="nav-items">
+            <img src="" alt="" class="nav-items__img">
+            <span class="nav-items__span">CC ROAST</span>
+        </div>
+        <div class="nav-items">
+            <img src="" alt="" class="nav-items__img">
+            <span class="nav-items__span">SOCIAL</span>
+        </div>
+        <div class="nav-items">
+            <img src="" alt="" class="nav-items__img">
+            <span class="nav-items__span">TICKETS</span>
+        </div>
     </div>
     <div class="main-contents">
-
+        <div class="main-carousel"></div>
+        <div class="main-card-wrap">
+            <div class="main-card-sort">
+                <div class="main-card-sort__image--one-column"></div>
+                <div class="main-card-sort__image--three-column"></div>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+            <div class="main-card">
+                <div class="main-card__img"></div>
+                <span class="main-card__span">JOE ROGAN</span>
+            </div>
+        </div>
     </div>
     <div class="right-sidebar">
-
+        <div class="sidebar-timecard">
+            <div class="sidebar-timecard__img"></div>
+            <div class="sidebar-timecard__span--title">Oksana Frewer</div>
+            <div class="sidebar-timecard__span--time">8m</div>
+            <div class="sidebar-timecard__span--contents">A little concerned about how loose the definition of engagement can be? Our government is out of control!! You make an important argument!</div>
+        </div>
+        <div class="sidebar-timecard">
+            <div class="sidebar-timecard__img"></div>
+            <div class="sidebar-timecard__span--title">Oksana Frewer</div>
+            <div class="sidebar-timecard__span--time">8m</div>
+            <div class="sidebar-timecard__span--contents">A little concerned about how loose the definition of engagement can be? Our government is out of control!! You make an important argument!</div>
+        </div>
+        <div class="sidebar-timecard">
+            <div class="sidebar-timecard__img"></div>
+            <div class="sidebar-timecard__span--title">Oksana Frewer</div>
+            <div class="sidebar-timecard__span--time">8m</div>
+            <div class="sidebar-timecard__span--contents">A little concerned about how loose the definition of engagement can be? Our government is out of control!! You make an important argument!</div>
+        </div>
     </div>
 </body>
 </html>
