[2020-05-22]update(dashboard-BEM css complete)

--- a/www_root/dashboard/html/index.html
+++ b/www_root/dashboard/html/index.html
@@ -16,6 +16,27 @@
             <!-- reversed : float-right -->
             <img src="../img/header/dash_collections.png" alt="" class="profile__img--box">
             <img src="../img/header/dash_notifications.png" alt="" class="profile__img--alarm">
+            <div class="profile-dropdown">
+                <div class="profile-dropdown-header">
+                    <img src="../img/header/dash_back.png" alt="" class="profile-dropdown-header__img">
+                    <span class="profile-dropdown-header__span">
+                        REPLY THREAD
+                    </span>
+                </div>
+                <div class="profile-dropdown-body">
+                    <div class="image-frame">
+                        <span class="image-frame__span">
+                            THE DAILY SHOW
+                        </span>
+                        <img src="../img/right-sidebar/dash_jon.png" alt="" class="image-frame__img">
+                        <div class="image-frame-bottom green"></div>
+                        <div class="image-frame-bottom red"></div>
+                    </div>
+                    <span class="profile-dropdown-body__span">
+                        6TH FEBURUARY 2013
+                    </span>
+                </div>
+            </div>
         </div>
     </header>
     <div class="left-navbar">
@@ -75,9 +96,13 @@
             <div class="main-card-sort">
                 <img src="../img/main-content/dash_view-as-list.png" alt="" class="main-card-sort__image--list">
                 <img src="../img/main-content/dash_view-as-tiles.png" alt="" class="main-card-sort__image--tiles">
-                <select name="" id="" class="main-card-sort__input--sort">
-                    <option value="">SORTED BY POPULARITY</option>
-                </select>
+                <div class="main-card-sort__div--select">
+                </div>
+                <ul class="main-card-sort__ul">
+                    <li class="selected">SROTED BY POPULARITY</li>
+                    <li>I'm not seslected</li>
+                </ul>
+
             </div>
             <div class="main-card">
                 <img src="../img/main-content/dash_kevin.png" alt="" class="main-card__img">
