--- a/www_root/dashboard/html/index.html
+++ b/www_root/dashboard/html/index.html
@@ -51,10 +51,9 @@
             <img src="../img/left-navbar/dash_shows.png" alt="" class="nav-items__img">
             <span class="nav-items__span">SHOWS</span>
         </div>
-        <div class="nav-items--selected">
-            <div class="nav-itmes--selected-highright"></div>
-            <img src="../img/left-navbar/dash_stand-up.png" alt="" class="nav-items--selected__img">
-            <span class="nav-items--selected__span">STAND - UP</span>
+        <div class="nav-items selected">
+            <img src="../img/left-navbar/dash_stand-up.png" alt="" class="nav-items__img">
+            <span class="nav-items__span">STAND - UP</span>
             <div class="nav-items-dropdown"><span class="nav-items-dropdown__span">THE DAILY SHOW</span></div>
             <div class="nav-items-dropdown"><span class="nav-items-dropdown__span">THE COLBERT REPORT</span></div>
             <div class="nav-items-dropdown"><span class="nav-items-dropdown__span">SOUTH PARK</span>
@@ -92,53 +91,103 @@
             <span class="main-carousel__span-title">STEPHEN COLBERT</span>
             <span class="main-carousel__span-comment">Mulling a run for the Presidency</span>
         </div>
-        <div class="main-card-wrap">
-            <div class="main-card-sort">
-                <img src="../img/main-content/dash_view-as-list.png" alt="" class="main-card-sort__image--list">
-                <img src="../img/main-content/dash_view-as-tiles.png" alt="" class="main-card-sort__image--tiles">
-                <div class="main-card-sort__div--select">
+        <div class="main-card-sort">
+            <img src="../img/main-content/dash_view-as-list.png" alt="" class="main-card-sort__image--list">
+            <img src="../img/main-content/dash_view-as-tiles.png" alt="" class="main-card-sort__image--tiles">
+            <div class="order-wrap">
+                <div class="main-card-order__div--select">
                 </div>
-                <ul class="main-card-sort__ul">
-                    <li class="selected">SROTED BY POPULARITY</li>
-                    <li>I'm not seslected</li>
+                <ul class="main-card-order__ul">
+                    <li class="main-card-order__ul__li visible">SROTED BY POPULARITY</li>
+                    <li class="main-card-order__ul__li">I'm not seslected</li>
+                    <li class="main-card-order__ul__li">I'm not seslected</li>
+                    <li class="main-card-order__ul__li">I'm not seslected</li>
+                    <li class="main-card-order__ul__li">I'm not seslected</li>
+                    <li class="main-card-order__ul__li">I'm not seslected</li>
                 </ul>
-
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_kevin.png" alt="" class="main-card__img">
-                <span class="main-card__span">KEVIN HART</span>
+        </div>
+        <div class="main-card-wrap">
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_kevin.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">KEVIN HART</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_joe.png" alt="" class="main-card__img">
-                <span class="main-card__span">JOE ROGAN</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_joe.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">JOE ROGAN</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_nick.png" alt="" class="main-card__img">
-                <span class="main-card__span">NICK KROLL</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_nick.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">NICK KROLL</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_patton.png" alt="" class="main-card__img">
-                <span class="main-card__span">PATTON OSWALT</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_patton.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">PATTON OSWALT</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_amy.png" alt="" class="main-card__img">
-                <span class="main-card__span">AMY SCHUMER</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_amy.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">AMY SCHUMER</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_neal.png" alt="" class="main-card__img">
-                <span class="main-card__span">NEAL BRENNAN</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_neal.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">NEAL BRENNAN</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_tig.png" alt="" class="main-card__img">
-                <span class="main-card__span">TIG NOTARO</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_tig.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">TIG NOTARO</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_hannibal.png" alt="" class="main-card__img">
-                <span class="main-card__span">HANNIBAL BURESS</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_hannibal.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">HANNIBAL BURESS</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
-            <div class="main-card">
-                <img src="../img/main-content/dash_louis.png" alt="" class="main-card__img">
-                <span class="main-card__span">LOUIS C.K</span>
+            <div class="main-card tiles">
+                <div class="main-card-header">
+                    <img src="../img/main-content/dash_louis.png" alt="" class="main-card-header__img">
+                    <span class="main-card-header__span">LOUIS C.K</span>
+                </div>
+                <span class="main-card__span">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore, quisquam dolorem dolorum, dolore eum commodi ad ullam at ipsam sed laudantium optio quidem vitae consequuntur perferendis id consequatur in!
+                </span>
             </div>
         </div>
     </div>
@@ -167,4 +216,98 @@
         <span class="right-sidebar__span-progress">Start Typing...</span>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+crossorigin="anonymous"></script>
+<script>
+    // header alarm-toggle
+    var alarm = document.querySelector('.profile__img--alarm');
+    var dropdown = document.querySelector('.profile-dropdown');
+    var toggle = (function(){ 
+        var isVisible = false;
+        return function(){
+            // dropdown.style.height = isVisible ? '340px' : 0;
+            dropdown.style.paddingTop = isVisible ? '8px' : 0;
+            dropdown.style.opacity = isVisible ? '1' : 0;
+            dropdown.style.top = isVisible? '52px' : '44px';
+            isVisible = !isVisible
+        };
+    })();
+    // main-content sort
+    var mainCards = document.querySelectorAll('.main-card');
+    var sortList = document.querySelector('.main-card-sort__image--list');
+    var sortTiles = document.querySelector('.main-card-sort__image--tiles');
+    // sorted by list
+    var sortByList = (function(){
+        mainCards.forEach(elem => {
+            elem.className = 'main-card list'
+            elem.children[1].style.display = 'block'
+        })
+        setTimeout(() => {
+            mainCards.forEach(elem => {
+                elem.children[1].style.opacity = '1';
+            }) 
+        }, 500);
+
+        sortList.removeEventListener('click', sortByList);
+        sortTiles.addEventListener('click', sortByTiles)
+    })
+    // sorted by tiles 
+    var sortByTiles = (function(){
+        mainCards.forEach(elem => {
+            elem.children[1].style.opacity = '0';
+
+        });
+        setTimeout(() => {
+            mainCards.forEach(elem => {
+                elem.children[1].style.display = 'none'
+                elem.className = 'main-card tiles'
+            }) 
+        }, 500);
+
+        sortTiles.removeEventListener('click', sortByTiles);
+        sortList.addEventListener('click', sortByList)
+    })
+    // main-content set order value
+    var orders = document.querySelectorAll('.main-card-order__ul__li')
+    var orderWrap = document.querySelector('.order-wrap') 
+    var viewOrder = function(){
+        alert('view')
+        document.querySelector('.main-card-order__ul').style.height = orders.length * 50 + 'px';
+        orders.forEach(order => {
+            order.className = 'main-card-order__ul__li visible'
+            order.addEventListener('click', changeOrder)
+        });
+        orderWrap.removeEventListener('click', viewOrder);
+    } 
+    var changeOrder = function(){
+        alert('change')
+        document.querySelector('.main-card-order__ul').style.height = 50 + 'px';
+        setTimeout(() => {
+            orderWrap.addEventListener('click', viewOrder);
+            orders.forEach(order => {
+                order.className = 'main-card-order__ul__li'
+                order.removeEventListener('click', changeOrder)
+            });
+            this.className = 'main-card-order__ul__li visible'
+        }, 380);
+    }
+    // left-navbar list dropdown
+    var leftNavbar = document.querySelectorAll('.nav-items')
+    var dropDown = function(){
+        document.querySelector('.nav-items.selected').style.height = '50px';
+        document.querySelector('.nav-items.selected').className = 'nav-items';
+        this.className = 'nav-items selected'
+        var dropdownItems = document.querySelectorAll('.selected>.nav-items-dropdown')
+        this.style.height = 50 * (dropdownItems.length+1) + 'px'; 
+    }
+    // listener entry
+    alarm.addEventListener('click', toggle);
+    sortList.addEventListener('click', sortByList);
+    sortTiles.addEventListener('click', sortByTiles);
+    orderWrap.addEventListener('click', viewOrder);
+    leftNavbar.forEach(navItem => {
+        navItem.addEventListener('click', dropDown);
+    })
+</script>
 </html>
