--- a/www_root/dashboard/html/index.html
+++ b/www_root/dashboard/html/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/common.css">
-    <title>index.html</title>
+    <title>Dashboard</title>
 </head>
-<body>
+<body id="top">
     <header class="header">
         <input type="text" class="header__input">
         <div class="profile">
@@ -215,6 +215,9 @@
         </span>
         <span class="right-sidebar__span-progress">Start Typing...</span>
     </div>
+    <div class="modal-top">
+        ^
+    </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
 integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -264,7 +267,6 @@ crossorigin="anonymous"></script>
                 elem.className = 'main-card tiles'
             }) 
         }, 500);
-
         sortTiles.removeEventListener('click', sortByTiles);
         sortList.addEventListener('click', sortByList)
     })
@@ -301,11 +303,33 @@ crossorigin="anonymous"></script>
         var dropdownItems = document.querySelectorAll('.selected>.nav-items-dropdown')
         this.style.height = 50 * (dropdownItems.length+1) + 'px'; 
     }
+    // back to top
+    var topDiv = document.querySelector('.modal-top')
+    var backToTop = function(){
+        window.scrollTo({ top: 0, behavior: 'smooth' })
+        // location.href = '#top'
+    }
+    var timer = null
+    var scrollBlur = function(){
+        if(timer !== null) {
+            clearTimeout(timer);
+        }
+        topDiv.style.opacity = '0';
+        topDiv.removeEventListener('click', backToTop);
+        timer = setTimeout(function(){
+            if(window.scrollY !== 0){
+                topDiv.style.opacity = '1';
+                topDiv.addEventListener('click', backToTop);
+            }
+        }, 400)
+    }
     // listener entry
     alarm.addEventListener('click', toggle);
     sortList.addEventListener('click', sortByList);
     sortTiles.addEventListener('click', sortByTiles);
     orderWrap.addEventListener('click', viewOrder);
+    topDiv.addEventListener('click', backToTop);
+    window.addEventListener('scroll', scrollBlur, false);
     leftNavbar.forEach(navItem => {
         navItem.addEventListener('click', dropDown);
     })
