--- a/www_root/dashboard/html/index.html
+++ b/www_root/dashboard/html/index.html
@@ -51,7 +51,7 @@
             <img src="../img/left-navbar/dash_shows.png" alt="" class="nav-items__img">
             <span class="nav-items__span">SHOWS</span>
         </div>
-        <div class="nav-items selected">
+        <div class="nav-items">
             <img src="../img/left-navbar/dash_stand-up.png" alt="" class="nav-items__img">
             <span class="nav-items__span">STAND - UP</span>
             <div class="nav-items-dropdown"><span class="nav-items-dropdown__span">THE DAILY SHOW</span></div>
@@ -110,6 +110,8 @@
         <div class="main-card-wrap">
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_kevin.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">KEVIN HART</span>
                 </div>
@@ -119,6 +121,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_joe.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">JOE ROGAN</span>
                 </div>
@@ -128,6 +132,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_nick.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">NICK KROLL</span>
                 </div>
@@ -137,6 +143,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_patton.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">PATTON OSWALT</span>
                 </div>
@@ -146,6 +154,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_amy.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">AMY SCHUMER</span>
                 </div>
@@ -155,6 +165,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_neal.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">NEAL BRENNAN</span>
                 </div>
@@ -164,6 +176,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_tig.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">TIG NOTARO</span>
                 </div>
@@ -173,6 +187,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_hannibal.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">HANNIBAL BURESS</span>
                 </div>
@@ -182,6 +198,8 @@
             </div>
             <div class="main-card tiles">
                 <div class="main-card-header">
+                    <span class="main-card-attach__span">12 VIDEOS</span>
+                    <img src="../img/main-content/dash_add-to.png" alt="" class="main-card-attach__img">
                     <img src="../img/main-content/dash_louis.png" alt="" class="main-card-header__img">
                     <span class="main-card-header__span">LOUIS C.K</span>
                 </div>
@@ -219,119 +237,5 @@
         ^
     </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-crossorigin="anonymous"></script>
-<script>
-    // header alarm-toggle
-    var alarm = document.querySelector('.profile__img--alarm');
-    var dropdown = document.querySelector('.profile-dropdown');
-    var toggle = (function(){ 
-        var isVisible = false;
-        return function(){
-            // dropdown.style.height = isVisible ? '340px' : 0;
-            dropdown.style.paddingTop = isVisible ? '8px' : 0;
-            dropdown.style.opacity = isVisible ? '1' : 0;
-            dropdown.style.top = isVisible? '52px' : '44px';
-            isVisible = !isVisible
-        };
-    })();
-    // main-content sort
-    var mainCards = document.querySelectorAll('.main-card');
-    var sortList = document.querySelector('.main-card-sort__image--list');
-    var sortTiles = document.querySelector('.main-card-sort__image--tiles');
-    // sorted by list
-    var sortByList = (function(){
-        mainCards.forEach(elem => {
-            elem.className = 'main-card list'
-            elem.children[1].style.display = 'block'
-        })
-        setTimeout(() => {
-            mainCards.forEach(elem => {
-                elem.children[1].style.opacity = '1';
-            }) 
-        }, 500);
-
-        sortList.removeEventListener('click', sortByList);
-        sortTiles.addEventListener('click', sortByTiles)
-    })
-    // sorted by tiles 
-    var sortByTiles = (function(){
-        mainCards.forEach(elem => {
-            elem.children[1].style.opacity = '0';
-
-        });
-        setTimeout(() => {
-            mainCards.forEach(elem => {
-                elem.children[1].style.display = 'none'
-                elem.className = 'main-card tiles'
-            }) 
-        }, 500);
-        sortTiles.removeEventListener('click', sortByTiles);
-        sortList.addEventListener('click', sortByList)
-    })
-    // main-content set order value
-    var orders = document.querySelectorAll('.main-card-order__ul__li')
-    var orderWrap = document.querySelector('.order-wrap') 
-    var viewOrder = function(){
-        alert('view')
-        document.querySelector('.main-card-order__ul').style.height = orders.length * 50 + 'px';
-        orders.forEach(order => {
-            order.className = 'main-card-order__ul__li visible'
-            order.addEventListener('click', changeOrder)
-        });
-        orderWrap.removeEventListener('click', viewOrder);
-    } 
-    var changeOrder = function(){
-        alert('change')
-        document.querySelector('.main-card-order__ul').style.height = 50 + 'px';
-        setTimeout(() => {
-            orderWrap.addEventListener('click', viewOrder);
-            orders.forEach(order => {
-                order.className = 'main-card-order__ul__li'
-                order.removeEventListener('click', changeOrder)
-            });
-            this.className = 'main-card-order__ul__li visible'
-        }, 380);
-    }
-    // left-navbar list dropdown
-    var leftNavbar = document.querySelectorAll('.nav-items')
-    var dropDown = function(){
-        document.querySelector('.nav-items.selected').style.height = '50px';
-        document.querySelector('.nav-items.selected').className = 'nav-items';
-        this.className = 'nav-items selected'
-        var dropdownItems = document.querySelectorAll('.selected>.nav-items-dropdown')
-        this.style.height = 50 * (dropdownItems.length+1) + 'px'; 
-    }
-    // back to top
-    var topDiv = document.querySelector('.modal-top')
-    var backToTop = function(){
-        window.scrollTo({ top: 0, behavior: 'smooth' })
-        // location.href = '#top'
-    }
-    var timer = null
-    var scrollBlur = function(){
-        if(timer !== null) {
-            clearTimeout(timer);
-        }
-        topDiv.style.opacity = '0';
-        topDiv.removeEventListener('click', backToTop);
-        timer = setTimeout(function(){
-            if(window.scrollY !== 0){
-                topDiv.style.opacity = '1';
-                topDiv.addEventListener('click', backToTop);
-            }
-        }, 400)
-    }
-    // listener entry
-    alarm.addEventListener('click', toggle);
-    sortList.addEventListener('click', sortByList);
-    sortTiles.addEventListener('click', sortByTiles);
-    orderWrap.addEventListener('click', viewOrder);
-    topDiv.addEventListener('click', backToTop);
-    window.addEventListener('scroll', scrollBlur, false);
-    leftNavbar.forEach(navItem => {
-        navItem.addEventListener('click', dropDown);
-    })
-</script>
+<script src="../js/dashboard.js"></script>
 </html>
